fixed layout issues, starting to think about react

--- a/client/css/goodwin.css
+++ b/client/css/goodwin.css
@@ -15,8 +15,10 @@ body {
 .chatinterface,
 .forminterface {
   width: 50%;
+  min-height: 100%;
   float: left;
-  border: 1px solid white;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .main {
   margin: 0 auto;
@@ -28,14 +30,17 @@ body {
   padding-left: 20px;
 }
 .forminterface {
-  border-width: 1px;
-  border-color:black;
   padding-left: 5px;
+  padding-right: 5px;
+}
+.chatinterface {
+  border-right: 1px solid black;
 }
 /* sticky footer */
 .footer {
   position: absolute;
   bottom: 0;
+
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
